# ECHO-13-Theoretic-Language-Program

./: CODE_OF_CONDUCT.md  coverage.yml  publish.yml  pyproject.toml  pytest.ini  requirements.txt
.github/instructions/: echo13.instructions.md
.github/workflows/: ## GitHub Copilot Chat.txt  azure-functions-app-python.yml  ci-pipeline.yml  ci.yml  lint.yml  python-app.yml  python-package-conda.yml  python-package.yml  stale.yml
createagent/: skill.md
docs/: spec-semantics.md
github/workflows/: ci.yml
tests/: test_azure_functions_workflow.py  test_basic.py  test_ci_workflow.py  test_engine.py  test_parity_mod2.py
